Fixed background video not shrinking on mobile

--- a/css/skin.css
+++ b/css/skin.css
@@ -2607,7 +2607,24 @@ only screen and (				min-resolution: 2dppx) {
 }
 
 .background-video {
-	object-fit: cover;
-	min-width: 100%;
-	min-height: 100%;
+	width: 100%;
+	height: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+	.background-video {
+		/* Make video to at least 100% wide and tall */
+		min-width: 100%; 
+		min-height: 100%; 
+		
+		/* Setting width & height to auto prevents the browser from stretching or squishing the video */
+		width: auto;
+		height: auto;
+		
+		/* Center the video */
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+	}
 }
